--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ document.addEventListener('DOMContentLoaded', () => {
     // --- Inicjalizacja Przycisku Discord ---
     const discordBtn = document.createElement('a');
     discordBtn.className = 'discord-btn';
-    const discordOAuthURL = "https://discord.com/oauth2/authorize?client_id=1421883621719019531&response_type=code&redirect_uri=https%3A%2F%2Fgrowek.github.io%2FOptimizer%2F%3Fv%3D&scope=identify+email+guilds.join+guilds";
+    const discordOAuthURL = "https://discord.com/oauth2/authorize?client_id=1421883621719019531&response_type=code&redirect_uri=https%3A%2F%2Fgrowek.github.io%2FOptimizerWEB%2F%3Fv%3D&scope=identify+email+guilds.join+guilds";
 
     function setDiscordLoginButton() {
         discordBtn.href = discordOAuthURL;
