--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }
 
     // TODO: podmień API_URL na adres Twojego backendu (np. http://TWÓJ_VPS:5000)
-    const API_URL = 'http://89.213.45.50:5000/';
+    const API_URL = 'http://89.213.45.50:5000';
 
     // Obsługa logowania (przykład, wyślij do backendu)
     loginForm.addEventListener('submit', async (e) => {
